--- a/templates/main.html
+++ b/templates/main.html
@@ -127,28 +127,34 @@ margin-bottom: 15px
 		<input type="submit" name="check_balance" value="Check balance">
 		<br><br>
 		{% if cheque_balance != None %}
-        ID: {{cheque_ident}}<br>
-				Balance: {{cheque_balance}}<br>
+                ID: {{cheque_ident}}<br>
+				Balance: {{cheque_balance}} BTC<br>
+                {% if cheque_balance != 0 %}
 				Verification code {{verification_index_chars}}: <input type="text" style="font: 16px sans-serif; width: 260px;" name="verification_code" value="{{verification_code}}"><br>
 				Send balance to BTC address: <input type="text" style="font: 16px sans-serif; width: 260px;" name="receiver_address" value="{{receiver_address}}">
 				<input type="hidden" name="verification_index" value="{{verification_index}}">
 				<input type="submit" name="redeem" value="Redeem">
+                {% endif %}
 				<br><br>
-    {% endif %}
+                {% if redeem_transaction != None %}
+                {{redeem_transaction}}
+                <br><br>
+                {% endif %}
+        {% endif %}
 		
 		</center>
 		<br>
 	</div>
 		<br>
-		<a href="/print" style="color: black;">Print Crypto Cheques</a> 
+		<a href="/print" target="_blank" style="color: black;">Print Crypto Cheques</a> 
 		<br>
 	</form>
 	
 		<div class="centerinfo">
 		<br><br>
-		If there are any issues, please contact us:
+		Crypto-Cheque is a open source project:
 		<br>
-		<a href="mailto:@gmail.com" style="color: black;">@gmail.com</a> 
+		<a href="https://github.com/hroser/crypto-cheque" style="color: black;">https://github.com/hroser/crypto-cheque</a> 
 		</div>
 
 	<br><br><br><br>
