--- a/templates/main.html
+++ b/templates/main.html
@@ -123,15 +123,16 @@ margin-bottom: 15px
 	<form id="check_balance_form" method="POST" enctype="multipart/form-data">
 		Enter cheque ID:
 		<br><br>
-    <input type="text" style="font: 16px sans-serif; width: 260px;" name="cheque_ident" value="{{cheque_ident}}">
+		<input type="text" style="font: 16px sans-serif; width: 260px;" name="cheque_ident" value="{{cheque_ident}}">
 		<input type="submit" name="check_balance" value="Check balance">
 		<br><br>
 		{% if cheque_balance != None %}
-                ID: {{cheque_ident}}<br>
+                ID: {{cheque_ident_requested}}<br>
 				Balance: {{cheque_balance}} BTC<br>
                 {% if cheque_balance != 0 %}
-				Verification code {{verification_index_chars}}: <input type="text" style="font: 16px sans-serif; width: 260px;" name="verification_code" value="{{verification_code}}"><br>
 				Send balance to BTC address: <input type="text" style="font: 16px sans-serif; width: 260px;" name="receiver_address" value="{{receiver_address}}">
+				Verification code {{verification_index_chars}}: <input type="text" style="font: 16px sans-serif; width: 260px;" name="verification_code" value="{{verification_code}}"><br>
+				<input type="hidden" name="cheque_ident_requested" value="{{cheque_ident_requested}}">
 				<input type="hidden" name="verification_index" value="{{verification_index}}">
 				<input type="submit" name="redeem" value="Redeem">
                 {% endif %}
