--- a/templates/main.html
+++ b/templates/main.html
@@ -128,7 +128,11 @@ margin-bottom: 15px
 		<br><br>
 		{% if cheque_balance != None %}
                 ID: {{cheque_ident_requested}}<br>
-				Balance: {{cheque_balance}} BTC<br>
+				Balance: {{cheque_balance}} BTC 
+				{% if cheque_public_address %}
+                (<a href="https://live.blockcypher.com/btc/address/{{cheque_public_address}}/" target="_blank" style="color: black;">show details</a>)
+                {% endif %}
+				<br>
                 {% if cheque_balance != 0 %}
 				Send balance to BTC address: <input type="text" style="font: 16px sans-serif; width: 260px;" name="receiver_address" value="{{receiver_address}}">
 				Verification code {{verification_index_chars}}: <input type="text" style="font: 16px sans-serif; width: 260px;" name="verification_code" value="{{verification_code}}"><br>
@@ -137,9 +141,10 @@ margin-bottom: 15px
 				<input type="submit" name="redeem" value="Redeem">
                 {% endif %}
 				<br><br>
+				
                 {% if redeem_transaction %}
                 Successfully redeemed:<br>
-                <a href="https://live.blockcypher.com/btc/tx/{{redeem_transaction}}/" style="color: black;">Show transaction</a> 
+                <a href="https://live.blockcypher.com/btc/tx/{{redeem_transaction}}/" target="_blank" style="color: black;">Show transaction</a> 
                 <br><br>
                 {% endif %}
         {% endif %}
