--- a/templates/main.html
+++ b/templates/main.html
@@ -148,7 +148,7 @@ margin-bottom: 15px
 				Transaction fee: {{transaction_fee}} BTC<br>
 				Total payout: {{total_payout}} BTC<br>
 				Send balance to BTC address: <input type="text" style="font: 16px sans-serif; width: 260px;" name="receiver_address" value="{{receiver_address}}">
-				Verification code {{verification_index_chars}}: <input type="text" style="font: 16px sans-serif; width: 260px;" name="verification_code" value="{{verification_code}}"><br>
+				Verification code {{verification_index_chars}}: <input type="text" style="font: 16px sans-serif; width: 260px;" name="verification_code" autocomplete="off" value="{{verification_code}}"><br>
 				<input type="hidden" name="cheque_ident_requested" value="{{cheque_ident_requested}}">
 				<input type="hidden" name="verification_index" value="{{verification_index}}">
         <button class="g-recaptcha"	data-sitekey="6LcsKHwUAAAAAAIVGe8GsSpjRd9Yuk-gesAxiXkj" data-callback="onSubmit">Redeem</button>
