--- a/templates/main.html
+++ b/templates/main.html
@@ -129,8 +129,8 @@ table, tr, td {
         <br><br>
 
         <span class="label">Verification code <b>{{verification_index_chars}}</b>:</span> <br>
-  			<input type="text" style="font: 16px sans-serif; width: 250px;" name="verification_code" autocomplete="off" value="{{verification_code}}">
-        <button class="g-recaptcha"	data-sitekey="6LcsKHwUAAAAAAIVGe8GsSpjRd9Yuk-gesAxiXkj" data-callback="onSubmit" style="width: 120px;">Redeem</button>
+  			<input type="text" style="font: 16px sans-serif; width: 250px;" name="verification_code" autocomplete="off" value="{{verification_code}}"><br><br>
+        <button class="g-recaptcha"	data-sitekey="6LcsKHwUAAAAAAIVGe8GsSpjRd9Yuk-gesAxiXkj" data-callback="onSubmit" style="width: 120px">Redeem</button>
         {% if error_message_verification %}<br><span class="error">{{error_message_verification}}</span><br>{% endif %}
         {% if error_message_captcha %}<br><span class="error">{{error_message_captcha}}</span><br>{% endif %}
 
