--- a/templates/print.html
+++ b/templates/print.html
@@ -5,7 +5,7 @@
 <style type="text/css">
 
 body {
-font: 10px monospace;
+font: 10px sans-serif;
 max-width: 800px;
 margin: 0 auto;
 }
@@ -113,7 +113,7 @@ white-space:pre;
 }
 
 .data {
-font-family: monospace;
+font-family: sans-serif;
 font-size: 9px;
 white-space:pre;
 }
@@ -178,7 +178,7 @@ VERIFICATION:
            <p style="margin-bottom:5px; margin-top:0mm;"><small>CHECK BALANCE:</small></p>
            <img src="http://api.qrserver.com/v1/create-qr-code/?size=80x80&data=https://live.blockcypher.com/btc/address/{{cheque_data['cheque'].public_address}}/" alt="" title=""><br><br>
            <p style="margin-bottom:3px; margin-top:0mm;"><small>REDEEM:</small></p>
-		   <span style="font-size: 8px !important; margin-top:0mm;">www.crypto-cheque.com</span><br><br>
+		   <span style="font-size: 8px !important; margin-top:0mm;">www.crypto-cheque.com</span><br><br><br>
         </center>
         </div>
 
