Verify newly created IDs in database

--- a/templates/main.html
+++ b/templates/main.html
@@ -84,7 +84,7 @@ table, tr, td {
 
 <body>
 <br><br><br>
-<h2 style="font-family: monospace;" align="center">Crypto Cheque</h2>
+<h2 align="center">Crypto Cheque</h2>
 <br><br>
 	<form id="check_balance_form" method="POST" enctype="multipart/form-data">
 
