Add title image

--- a/templates/main.html
+++ b/templates/main.html
@@ -82,6 +82,8 @@ table, tr, td {
 <br><br><br>
 <h2 align="center">Crypto Cheque</h2>
 <br><br>
+	<center><img src="https://storage.googleapis.com/crypto-cheque-data/crypto-cheque.png" alt="" border="1"></center>
+<br><br><br>
 	<form id="check_balance_form" method="POST" enctype="multipart/form-data">
 
     <table class="inputtable">
