--- a/templates/main.html
+++ b/templates/main.html
@@ -80,9 +80,12 @@ table, tr, td {
 
 <body>
 <br><br><br>
-<h2 align="center">Crypto Cheque</h2>
-<br><br>
-	<center><img src="https://storage.googleapis.com/crypto-cheque-data/crypto-cheque.png" alt="" border="1"></center>
+	<center>
+		<a href="/print" target="_blank" style="color: black;"><img src="https://storage.googleapis.com/crypto-cheque-data/logo-cheque-01.png" alt="" border="1"></a>
+		<br>
+		<a href="/print" target="_blank" style="font: 12px sans-serif !important; color: black; text-decoration: none">Print Crypto Cheques</a>
+	</center>
+
 <br><br><br>
 	<form id="check_balance_form" method="POST" enctype="multipart/form-data">
 
@@ -215,12 +218,6 @@ table, tr, td {
 
     {% endif %}
 	</div>
-
-    <center>
-		<br><br>
-		<a href="/print" target="_blank" style="color: black;">Print Crypto Cheques</a>
-		<br><br>
-    </center>
 
 	</form>
 
