Modified title line on print page

--- a/templates/print.html
+++ b/templates/print.html
@@ -85,8 +85,7 @@ white-space:pre;
 <body onload="window.print();">
 
 <hr>
-<h3 align="center">You are printing 3 Crypto-Cheques, please note:</h3>
-<h2 align="center">Print and use every ID only one time!</h2>
+<h2 align="center">!!! Print and use the cheques only one time !!!</h2>
 
 	{% for cheque_data in cheque_dates %}
 
